objects/Site__c.object
<CustomObject>
    <fields>
        <fullName>EE_Total_Hours__c</fullName>
        <label>EE Total Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EPC_LOI_Date__c</fullName>
        <label>EPC LOI Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EPC_Signed_Date__c</fullName>
        <label>EPC Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ESD_Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the Energy Storage Project Manager assigned to the Site.</inlineHelpText>
        <label>ESD Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ESP_Project_Manager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Electrical_Engineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal Electrical Engineer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sites4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Energy_Storage_Unit_Delivery_Date__c</fullName>
        <inlineHelpText>Estimated or Actual delivery date of the Energy Storage Unit</inlineHelpText>
        <label>Energy Storage Unit Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Engineer_Logged_In__c</fullName>
        <description>used to help determine who is logged in at the time, used to run reports for that user, no need to appear on layouts but should be visible for reports.</description>
        <formula>IF(  Development_SDE__c  = $User.Id , 1 , 
IF( Development_DE1_Drafter__c = $User.Id, 1, 
IF( Ops_DE1_Drafter__c = $User.Id, 1,
IF( Senior_Design_Engineer__c = $User.Id, 1,
IF( Electrical_Engineer__c  = $User.Id , 1 ,
IF(Internal_Civil_Engineer__c =  $User.Id , 1 ,
IF( Civil_Engineer__c  = $User.Id , 1 ,
IF(  Structural_Engineer__c   = $User.Id , 1 , 
0))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>used to help determine who is logged in at the time, used to run reports for that user</inlineHelpText>
        <label>Engineer Logged In</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Entitlement_Approval_Actual__c</fullName>
        <label>Planning Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up to User Record.</description>
        <inlineHelpText>Look up to User Record.</inlineHelpText>
        <label>Estimator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sites0yWI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Executed_ISA__c</fullName>
        <description>used in conjunction with roll up helper</description>
        <inlineHelpText>brings over date of most recent active intx app</inlineHelpText>
        <label>Executed ISA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_ISA__c</fullName>
        <description>Used with RollUp helper.  pulls over from related Interconnection App, pulls most recent date in the event of multiple applications</description>
        <inlineHelpText>pulls over from related Interconnection App, pulls most recent date in the event of multiple applications</inlineHelpText>
        <label>Expected ISA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Rebate__c</fullName>
        <label>Expected Rebate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>External_Civil_Engineer__c</fullName>
        <inlineHelpText>Enter the civil engineer of record contact</inlineHelpText>
        <label>Civil Engineer of Record</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Electrical_Engineer__c</fullName>
        <inlineHelpText>Enter the electrical engineer of record contact</inlineHelpText>
        <label>Electrical Engineer of Record</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Structural_Engineer__c</fullName>
        <inlineHelpText>Enter the structural engineer of record contact</inlineHelpText>
        <label>Structural Engineer of Record</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCDeadlineid__c</fullName>
        <label>FCDeadlineid</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FNTPDeadlineid__c</fullName>
        <label>FNTPDeadlineid</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FNTP_Date__c</fullName>
        <label>FNTP Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Feb_Estimated_Performance__c</fullName>
        <description>Needed for customer portal in Diaspark for Borrego O&amp;M</description>
        <inlineHelpText>Needed for customer portal in Diaspark for Borrego O&amp;M</inlineHelpText>
        <label>Feb Estimated Performance</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Feb_Irradiance_Data__c</fullName>
        <description>for O&amp;M customer portal</description>
        <inlineHelpText>for O&amp;M customer portal</inlineHelpText>
        <label>Feb Irradiance Data</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Final_Completion__c</fullName>
        <description>date field used by OPS</description>
        <label>Final Completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_AHJ_Meeting_Date__c</fullName>
        <label>First AHJ Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fixed_Ground_Installation__c</fullName>
        <description>Identifies Sites with Fixed Ground Type for DAS Materials History report</description>
        <formula>IF( INCLUDES( Type__c , &quot;Fixed Ground&quot; ) , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fixed Ground Installation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ForecastDefinition__c</fullName>
        <description>Pulls the Forecast Definition field from the Oppty</description>
        <formula>Opportunity__r.ForecastDefinition__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecast Definition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Governor_Address_1__c</fullName>
        <description>Legislator Information - Governor</description>
        <label>Governor Address 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Governor_Address_2__c</fullName>
        <description>Legislator Information - Governor</description>
        <label>Governor Address 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Governor_Address_3__c</fullName>
        <description>Legislator Information - Governor</description>
        <label>Governor Address 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Governor_City__c</fullName>
        <description>Legislator Information - Governor</description>
        <label>Governor City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Governor_First_Name__c</fullName>
        <description>Legislator Information - Governor</description>
        <label>Governor First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Governor_Last_Name__c</fullName>
        <description>Legislator Information - Governor</description>
        <label>Governor Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Governor_Party__c</fullName>
        <description>Legislator Information - Governor</description>
        <label>Governor Party</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Governor_Phone__c</fullName>
        <description>Legislator Information - Governor</description>
        <label>Governor Phone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Governor_Postal__c</fullName>
        <description>Legislator Information - Governor</description>
        <label>Governor Postal</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Governor_State__c</fullName>
        <description>Legislator Information - Governor</description>
        <label>Governor State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Governor_URL__c</fullName>
        <description>Legislator Information - Governor</description>
        <label>Governor URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>HO_to_CD_IFR_Site__c</fullName>
        <formula>Name &amp; &quot;: HO-CD IFR&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HO to CD IFR + Site</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HO_to_Mob_Cal_Cond__c</fullName>
        <description>Used for Calendar to determine if Site is between Handoff To Mobilization stages.</description>
        <formula>AND( TODAY() &gt;=  Handoff_Date__c  ,TODAY() &lt;=  Mobilization_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HO to Mob</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HO_to_Ops_Start__c</fullName>
        <description>calculates # of days from Handoff to Ops Enginering Start Date</description>
        <formula>Ops_Engineering_Start_DAte__c - Handoff_Date__c</formula>
        <inlineHelpText>calculates # of days from Handoff to Ops Enginering Start Date</inlineHelpText>
        <label>Handoff to Ops Start</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HO_to_PTO_Site__c</fullName>
        <formula>&quot;HO to PTO: &quot; &amp; Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HO to PTO + Site</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handoff_Date__c</fullName>
        <inlineHelpText>Date Site was handed off to Operations</inlineHelpText>
        <label>Handoff Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Handoff_to_CD_IFR__c</fullName>
        <formula>CD_Forecast_Release_Date__c -  Handoff_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>calculate # of days between Handoff and Const Set Release (CD IFR)</inlineHelpText>
        <label>Handoff to CD IFR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Handoff_to_Mob__c</fullName>
        <formula>Mobilization_Date__c -   Handoff_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>calculates # of days between Kickoff and Moblization</inlineHelpText>
        <label>Handoff to Mob</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Handoff_to_PTO__c</fullName>
        <formula>PTO_Date__c - Handoff_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Handoff to PTO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ISA_Actual__c</fullName>
        <label>ISA Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ISA_Received_Date__c</fullName>
        <label>ISA Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ImpactStudyReceivedDate__c</fullName>
        <inlineHelpText>Date Interconnection Study/Impact Study was received from Utility</inlineHelpText>
        <label>Interconnection Study Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interconnection_App_Submitted_Date__c</fullName>
        <label>Interconnection App Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interconnection_Status__c</fullName>
        <inlineHelpText>if there is an interconnection application it should match the status of that application, if not update as needed</inlineHelpText>
        <label>Interconnection Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Application Requested</fullName>
                </value>
                <value>
                    <fullName>Application Submitted</fullName>
                </value>
                <value>
                    <fullName>Application Accepted</fullName>
                </value>
                <value>
                    <fullName>Ready for SIS/CESIR</fullName>
                </value>
                <value>
                    <fullName>SIS/CESIR Underway</fullName>
                </value>
                <value>
                    <fullName>Ready for ISA</fullName>
                </value>
                <value>
                    <fullName>Executed ISA</fullName>
                </value>
                <value>
                    <fullName>Construction Timeline</fullName>
                </value>
                <value>
                    <fullName>Permission to Operate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internal_Civil_Engineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>will represent Junior Civil Engineers for reports</description>
        <inlineHelpText>Assigned Junior Civil Engineer or Civil Engineer I or II</inlineHelpText>
        <label>Internal Civil Engineer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SitesqWUX</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inverter_Access__c</fullName>
        <label>Inverter Access</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Inverter_Delivery_Date_Updated__c</fullName>
        <label>Inverter Delivery Date Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inverter_Delivery_Date__c</fullName>
        <inlineHelpText>Estimated or actual date of Inverter delivery</inlineHelpText>
        <label>Inverter Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inverter_Status__c</fullName>
        <description>procurement status of major components</description>
        <inlineHelpText>Procurement updates the following: Product Locked:when selection is confirmed between Eng/Prcmnt.PO Placed,when PO is submitted to the vendor.Product On Site,the order is delivered. Other teams use the remaining terms Defined, In progress or Complete.</inlineHelpText>
        <label>Inverter Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product Defined</fullName>
                </value>
                <value>
                    <fullName>PO Placed</fullName>
                </value>
                <value>
                    <fullName>Borrego Received</fullName>
                </value>
                <value>
                    <fullName>Subcon. Received</fullName>
                </value>
                <value>
                    <fullName>Product On Site</fullName>
                </value>
                <value>
                    <fullName>Install In Progress</fullName>
                </value>
                <value>
                    <fullName>Install Complete</fullName>
                </value>
                <value>
                    <fullName>Product Locked</fullName>
                </value>
                <value>
                    <fullName>Needs Further Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Jan_Estimated_Performance__c</fullName>
        <description>Needed for customer portal in Diaspark for Borrego O&amp;M</description>
        <inlineHelpText>Needed for customer portal in Diaspark for Borrego O&amp;M</inlineHelpText>
        <label>Jan Estimated Performance</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jan_Irradiance_Data__c</fullName>
        <description>for O&amp;M customer portal</description>
        <inlineHelpText>for O&amp;M customer portal</inlineHelpText>
        <label>Jan Irradiance Data</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jul_Estimated_Performance__c</fullName>
        <description>Needed for customer portal in Diaspark for Borrego O&amp;M</description>
        <inlineHelpText>Needed for customer portal in Diaspark for Borrego O&amp;M</inlineHelpText>
        <label>Jul Estimated Performance</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jul_Irradiance_Data__c</fullName>
        <description>for O&amp;M customer portal</description>
        <inlineHelpText>for O&amp;M customer portal</inlineHelpText>
        <label>Jul Irradiance Data</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jun_Estimated_Performance__c</fullName>
        <description>Needed for customer portal in Diaspark for Borrego O&amp;M</description>
        <inlineHelpText>Needed for customer portal in Diaspark for Borrego O&amp;M</inlineHelpText>
        <label>Jun Estimated Performance</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jun_Irradiance_Data__c</fullName>
        <description>for O&amp;M customer portal</description>
        <inlineHelpText>for O&amp;M customer portal</inlineHelpText>
        <label>Jun Irradiance Data</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KO_to_Entitlement__c</fullName>
        <description>Days between Project Kickoff Date and Entitlement Approval Date</description>
        <formula>Entitlement_Approval_Actual__c - Project_Kickoff_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Days between Project Kickoff Date and Entitlement Approval Date</inlineHelpText>
        <label>KO to Entitlement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KO_to_HO_Cal_Cond__c</fullName>
        <description>Used by Calendar to determine if Site is between Kickoff and Handoff stages.</description>
        <formula>AND( TODAY() &gt;= Project_Kickoff_Date__c  , TODAY() &lt;=  Handoff_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>KO to HO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KO_to_SUP__c</fullName>
        <description>Days between Project Kickoff Date and Site Use Permit Set Date</description>
        <formula>Site_Use_Permit_Set_Release__c - Project_Kickoff_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Days between Project Kickoff Date and Site Use Permit Set Date</inlineHelpText>
        <label>KO to SUP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Keys_Location__c</fullName>
        <label>Keys Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Kickoff_Meeting_Held__c</fullName>
        <description>Date of initial Kickoff Meeting.</description>
        <inlineHelpText>Enter the date of the initial Kickoff Meeting.</inlineHelpText>
        <label>Kickoff Meeting Held</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Kickoff_to_CD_IFR__c</fullName>
        <formula>CD_Forecast_Release_Date__c -  Project_Kickoff_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>caculates # of days between project kickoff date and Const Set Release (CD IFR)</inlineHelpText>
        <label>Kickoff to CD IFR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Kickoff_to_Handoff__c</fullName>
        <formula>Handoff_Date__c -  Project_Kickoff_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculates Day between Project Kickoff Date and  Handoff Date</inlineHelpText>
        <label>Kickoff to Handoff</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Kickoff_to_PTO__c</fullName>
        <formula>PTO_Date__c -  Project_Kickoff_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>calculate days between Kickoff and PTO</inlineHelpText>
        <label>Kickoff to PTO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L1_to_Handoff__c</fullName>
        <formula>Handoff_Date__c - Project__r.Created_Date_of_1st_PSD_Revision__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>calculates # of days between L1 and Handoff</inlineHelpText>
        <label>L1 to Handoff</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L1_to_Kickoff__c</fullName>
        <description>Calculates the # of days between Project Kickoff Date and the created date of 1st psd revision</description>
        <formula>Project_Kickoff_Date__c  -  Project__r.Created_Date_of_1st_PSD_Revision__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculates the # of days between Project Kickoff Date and the created date of 1st psd revision</inlineHelpText>
        <label>L1 to Kickoff</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L1_to_PTO__c</fullName>
        <formula>IF(  Project__r.Job_Number__c  =&apos;905-0367&apos;, 516, 
IF( Project__r.Job_Number__c  =&apos;905-0542&apos;, 387, 
IF( Project__r.Job_Number__c  =&apos;908-0075&apos;, 1119, 
IF( Project__r.Job_Number__c  =&apos;908-0072&apos;, 1119, 
IF( Project__r.Job_Number__c  =&apos;908-0076&apos;, 1200, 
IF( Project__r.Job_Number__c  =&apos;908-0073&apos;, 1203, 
 PTO_Date__c  -    Project__r.Created_Date_of_1st_PSD_Revision__c ))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculates # of days between L1 and PTO</inlineHelpText>
        <label>L1 to PTO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAN_Description__c</fullName>
        <inlineHelpText>if LAN was selected above provide details about location and wiring for host connection</inlineHelpText>
        <label>LAN Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LIDAR_GIS_Actual__c</fullName>
        <label>LIDAR GIS Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LIDAR_GIS_Released__c</fullName>
        <label>LIDAR GIS Released</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LNTP_Date__c</fullName>
        <inlineHelpText>Only required for non-Cash or 3rd Party Financed projects</inlineHelpText>
        <label>LNTP Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LT_Goal_from_Project__c</fullName>
        <formula>Project__r.LT_Goal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LT Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Land_Lease_LOI_Date__c</fullName>
        <description>pulls through from the Opportunity</description>
        <formula>Opportunity__r.Date_LOI_Signed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulls from the related Opportunity</inlineHelpText>
        <label>Land Lease LOI Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_Release_Level__c</fullName>
        <label>Latest Release Level</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <inlineHelpText>Y Coordinate</inlineHelpText>
        <label>Latitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_Commencement_Date__c</fullName>
        <label>Lease Commencement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Expiration_Date__c</fullName>
        <label>Lease Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Term_years__c</fullName>
        <label>Lease Term (years)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Link_to_50_Set_PDF__c</fullName>
        <inlineHelpText>Link to released 50% set</inlineHelpText>
        <label>50% Set PDF Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <inlineHelpText>X Coordinate</inlineHelpText>
        <label>Longitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCDeadlineid__c</fullName>
        <label>MCDeadlineid</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDDeadlineid__c</fullName>
        <label>MDDeadlineid</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mar_Estimated_Performance__c</fullName>
        <description>Needed for customer portal in Diaspark for Borrego O&amp;M</description>
        <inlineHelpText>Needed for customer portal in Diaspark for Borrego O&amp;M</inlineHelpText>
        <label>Mar Estimated Performance</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mar_Irradiance_Data__c</fullName>
        <description>for O&amp;M customer portal</description>
        <inlineHelpText>for O&amp;M customer portal</inlineHelpText>
        <label>Mar Irradiance Data</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MarkettoOwnerDate__c</fullName>
        <inlineHelpText>Date that 7C has been submitted, and project is ready to market to Owner</inlineHelpText>
        <label>7C Submittal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mary_s_New_Field__c</fullName>
        <label>Mary&apos;s New Field</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>May_Estimated_Performance__c</fullName>
        <description>Needed for customer portal in Diaspark for Borrego O&amp;M</description>
        <inlineHelpText>Needed for customer portal in Diaspark for Borrego O&amp;M</inlineHelpText>
        <label>May Estimated Performance</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>May_Irradiance_Data__c</fullName>
        <description>for O&amp;M customer portal</description>
        <inlineHelpText>for O&amp;M customer portal</inlineHelpText>
        <label>May Irradiance Data</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MeetingMinutes__c</fullName>
        <formula>Project__r.LinktoMeetingMinutes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meeting Minutes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MilestoneThisMonth__c</fullName>
        <formula>IF(AND(year(MarkettoOwnerDate__c)= YEAR(today()),(month(MarkettoOwnerDate__c)= MONTH(today()))), &quot;7c&quot;,
IF(AND( YEAR(Opportunity__r.CloseDate)= YEAR(TODAY()),MONTH(Opportunity__r.CloseDate)= MONTH(TODAY())), &quot;Contract Signed&quot;,
IF (AND(YEAR(PTO_Date__c)= YEAR(TODAY()),MONTH(PTO_Date__c)= MONTH(TODAY())), &quot;PTO&quot;, 
IF( AND(YEAR(Mobilization_Date__c)= YEAR(TODAY()),MONTH (Mobilization_Date__c)= MONTH(TODAY())), &quot;Mobilization&quot;, 
IF(AND(YEAR(FNTP_Date__c) = YEAR(TODAY()),MONTH(FNTP_Date__c) = MONTH(TODAY())), &quot;FNTP&quot;, 
IF (AND(YEAR(Final_Completion__c) = YEAR(TODAY()),MONTH(Final_Completion__c) = MONTH(TODAY())), &quot;Final Completion&quot;, 
&quot;not this month&quot;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Milestone This Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mob_to_PTO__c</fullName>
        <formula>PTO_Date__c -  Mobilization_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculates # of Days between Mobilization and PTO</inlineHelpText>
        <label>Mob to PTO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mob_to_Sub_Cal_Cond__c</fullName>
        <description>Used by Calendar to determine if Site is between Mobilization and Substantial Completion stages.</description>
        <formula>AND
( TODAY() &gt;= Mobilization_Date__c ,TODAY() &lt;= Substantial_Completion_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mob to Mech</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mob_to_Sub_Site__c</fullName>
        <formula>&quot;Mob to Mech: &quot; &amp; Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mob to Mech + Site</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mob_to_Sub__c</fullName>
        <formula>Substantial_Completion_Date__c -  Mobilization_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>calculates # of days between mobilization and substantial completion</inlineHelpText>
        <label>Mob to Mech</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mobilization_Baseline__c</fullName>
        <label>Mobilization Baseline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mobilization_Date__c</fullName>
        <label>Mobilization Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Module_Delivery_Date_Updated__c</fullName>
        <label>Module Delivery Date Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Module_Delivery_Date__c</fullName>
        <inlineHelpText>Estimated or actual date of Module delivery.</inlineHelpText>
        <label>Module Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Modules_Status__c</fullName>
        <label>Modules Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PO Placed</fullName>
                </value>
                <value>
                    <fullName>Borrego Received</fullName>
                </value>
                <value>
                    <fullName>Subcon. Received</fullName>
                </value>
                <value>
                    <fullName>Product On Site</fullName>
                </value>
                <value>
                    <fullName>Install In Progress</fullName>
                </value>
                <value>
                    <fullName>Install Complete</fullName>
                </value>
                <value>
                    <fullName>Needs Further Review</fullName>
                </value>
                <value>
                    <fullName>Product Locked</fullName>
                </value>
                <value>
                    <fullName>Product Defined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>National_Lower_Chamber__c</fullName>
        <label>National Lower Chamber</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Lower_District_ID__c</fullName>
        <label>National Lower District ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Lower_First_Name__c</fullName>
        <label>National Lower First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Lower_Last_Name__c</fullName>
        <label>National Lower Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Lower_Party__c</fullName>
        <label>National Lower Party</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>